fixed webkit postion fixed z-index bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,7 +349,6 @@ img {
 
 #blog-header {
 	position: relative;
-	z-index: 30;
 	padding: 6em 0;
 	text-align: center;
 }
